syntax = "proto3";
package api;

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);

  rpc SayHelloServerStream (HelloRequest) returns (stream HelloResponse);

  rpc SayHelloClientStream (stream HelloRequest) returns (HelloResponse);

  rpc SayHelloBidiStream (stream HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
  string greeting = 1;
}

message HelloResponse {
  string reply = 1;
}
